Edit swagger document. Docinemtated response status for 201 and 500
