# controller/bookingsController.js
@@ -37,7 +37,7 @@ exports.getAll = async (req, res) => {
       booking = await Bookings.create(req.body, 
             {
                 logging:console.log, 
-                fields: ["bookingTime", "id_customer", "id_service", "id_barber"]
+                fields: ["bookingDate","bookingTime", "id_customer", "id_service", "id_barber"]
             })
     } catch (error){
         if (error instanceof db.Sequelize.ValidationError){
@@ -48,7 +48,6 @@ exports.getAll = async (req, res) => {
         }
         return
     }
-
     if(booking===null){
         res.status(400).send({"error": "Invalid input, missing required params"})
         return
@@ -90,7 +89,7 @@ exports.updateById = async (req, res) =>{
       }
       return
   }
-  res.status(201)
+  res.status(200)
   .location(`${getBaseUrl(req)}/bookings/${booking.id_booking}`)
   .json(booking)
 }
